@@ -32,6 +32,9 @@ Command to execute on the remote shells. This starts \fIgsh\fR in non\-interacti
 \fB\-\-ssh=SSH\fR
 Ssh command to use [ssh -oLogLevel=Quiet -t %(host)s bash --noprofile]. By default, \fIgsh\fR spawns lightweight remote shells using the ssh command, but another shell command can be specified here. For example, with \-\-ssh='usleep $((RANDOM*50)); exec ssh' a delay will be introduced to avoid all hosts accessing a NFS server at the same time. If the hostname should not be added at the end of the command, the macro %(host)s can be inserted where the hostname should be placed. Also, make sure the command you use launchs a pty, this may need the \-t option for ssh.
 .TP
+\fB\-\-password\-file=FILE\fR
+read a password from the specified file. - is the tty. This can be used when public key authentication is not available, either write the password in a file, or set FILE to - so that \fIgsh\fR will prompt for a password.
+.TP
 \fB\-\-log\-file=LOG_FILE\fR
 File to log each machine conversation [none]. If specified, \fIgsh\fR will log all executed commands and their output in the file. The logging destination can be dynamically changed with the :set_log control command.
 .TP
